--- a/.env.example
+++ b/.env.example
@@ -21,15 +21,14 @@ POSTGRES_PORT=5432
 DEEPL_API_KEY=secret
 
 ENABLE_MAILING_LISTS=False
-TENCA_API_HOST=lists.myhpi.de
-TENCA_API_PORT=8425
-TENCA_API_SCHEME=https
+TENCA_MAILMAN_URL=http://localhost:1234/3.1
 TENCA_ADMIN_USER=test
 TENCA_ADMIN_PASS=test
 TENCA_LIST_HASH_ID_SALT=salt_here
-TENCA_WEB_UI_HOSTNAME=lists.myhpi.de
 TENCA_DISABLE_GOODBYE_MESSAGES=True
-TENCA_HASH_STORAGE_CLASS=myhpi.tenca_django.models.DjangoModelCachedDescriptionHashStorage
-TENCA_TEST_LIST_DOMAIN=TENCA_WEB_UI_HOSTNAME
+TENCA_DISABLED_NON_MEMBER_ACTION=reject
+TENCA_BLOCKED_MEMBER_ACTION=reject
+TENCA_RETRY_CANCELS_PENDING_SUBSCRIPTION=True
+TENCA_USE_RANDOM_LIST_HASH=False
 
 ANONYMOUS_IP_RANGE_GROUPS="127.0.0.1/32=Moderators,127.0.0.0/8=localhost"
