--- a/pyproject.toml
+++ b/pyproject.toml
@@ -16,13 +16,13 @@ django-select2 = "^8.2.0"
 django-static-precompiler = {extras = ["libsass"], version = "^2.4"}
 django-debug-toolbar = "^4.4.6"
 django-permissionedforms = "^0.1"
-tenca = "^0.0.3"
 html2text = "^2020.1.16"
 wagtail-markdown = "^0.12.1"
 autoflake = "^2.2.1"
 setuptools-scm = "^8.0.4"
 django-prometheus = "^2.3.1"
 djlint = "^1.35.2"
+mailmanclient = "^3.3.5"
 
 [tool.poetry.group.dev.dependencies]
 pylint = "^3.2.6"
